--- a/home.html
+++ b/home.html
@@ -7,25 +7,25 @@
        <body>
         <section>
             <header>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg bg-light" id="nav1">
                <div class="container-fluid">
-                 <a class="navbar-brand" href="#">LOGO</a>
+                 <a class="navbar-brand " href="#">LOGO</a>
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                    <span class="navbar-toggler-icon"></span>
                  </button>
                  <div class="collapse navbar-collapse" id="navbarNav">
                    <ul class="navbar-nav">
                      <li class="nav-item">
-                       <a class="nav-link active" aria-current="page" href="#">Home</a>
+                       <a class="nav-link text-white" aria-current="page" href="#">Home</a>
                      </li>
                      <li class="nav-item">
-                       <a class="nav-link" href="#">work</a>
+                       <a class="nav-link text-white" href="#">work</a>
                      </li>
                      <li class="nav-item">
-                       <a class="nav-link" href="#">contact</a>
+                       <a class="nav-link text-white" href="#">contact</a>
                      </li>
                      <li class="nav-item">
-                       <a class="nav-link" href="#">about me</a>
+                       <a class="nav-link text-white" href="#">about me</a>
                      </li>
                    </ul>
               
@@ -36,20 +36,58 @@
           </section>
 
 
-<div class="container-fluid banner">
+<div class="main">
+  <div class="container-fluid banner">
      <div class="container text-center">
-<h3 class="display-1"> PLAY TRADITIONAL GAME</h3>
-<h4 Class="display-2">Experience new traditional game play</h4> 
+        <h1> PLAY TRADITIONAL GAME</h1>
+        <h2>Experience new traditional game play</h2> 
 
-<div class="container-fluid Thestory pt-5 pb-5">
+  <div class="container-fluid Thestory pt-5 pb-5">
 </div> 
-
-<button type="button" class="btn btn-primary"> PLAY NOW</button>     
+        <button type="button"> PLAY NOW</button>     
      </div>     
+    </div>
 </div>
 
 
+<div class="main1">
+  <div class="container text-white Thestory pt-5 pb-5">    
+<h3>what's so special ?</h3>
+<h4>THE GAMES</h4>
+<div class=" image1">
+  <img src="gunting.png" class="img-fluid" alt="gunting">
+ </div>
+  </div>
+</div>
+
+<div class="main2">
+  <div >
+    <h5 class="text-white">what's so special?</h5>
+    <h6>FEATURES</h6>
+  </div>
+  </div>
+
+  <div class="main3 text-white">
+    <div>
+       <h6> can My Computer Play This Game ?</h6>
+       <h7> SYSTEM REQUIREMENTS </h7> 
+  </div>
+</div>
+
+<div class="main4 text-white">
+  <div>
+      <h8>TOP SCORES</h8><br>
+      <h9>This Top Score From Various games provided On This Platform</h9>
+  </div>
+</div>
+
+
+
+</div>
 </body>
 </html>
+
+
+
 
 
